# cloudgpu

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: comfylib.py
src/cloudgpu/: cli.py
src/cloudgpu/local/: apps.py  config.py  display.py  lambda_api.py  orchestration.py  profiles.py  ssh.py  sync.py
src/cloudgpu/remote/: __main__.py  autoterminate.py  detect.py  installer.py  recovery.py  service.py  state.py  utils.py
src/cloudgpu/remote/apps/: aitoolkit.py  comfyui.py
src/cloudgpu/templates/: __init__.py  comfylib.py  provision.py
src/cloudgpu/templates/comfyui/: __init__.py
tests/: conftest.py  test_aitoolkit_installer.py  test_apps.py  test_autoterminate.py  test_cli_autoterminate.py  test_cli_down.py  test_cli_forward.py  test_cli_init.py  test_cli_provision.py  test_cli_setup.py  test_comfylib.py  test_comfyui_installer.py  test_config.py  test_lambda_api.py  test_orchestration.py  test_profiles.py  test_service.py  test_ssh.py  test_state.py
